# intel2sigma

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SPEC.md  architecture.md  heuristics.md  pyproject.toml  snyk-requirements.txt  ui.md
.claude/: launch.json  settings.local.json
data/: mitre_attack.json
data/examples/: dns_query_anonymfiles.yml  network_connection_certutil_outbound.yml  registry_set_aedebug_persistence.yml
data/taxonomy/: create_remote_thread.yml  dns_query.yml  file_event.yml  image_load.yml  pipe_created.yml  registry_set.yml
docs/: architecture.md  heuristic-calibration.md  heuristics.md  pipeline-matrix.md  recalibration.md  taxonomy.md  ui.md  web-state-model.md
intel2sigma/: __init__.py  _audit.py  _data.py  _version.py
intel2sigma/cli/: __init__.py  main.py
intel2sigma/core/: __init__.py  model.py  serialize.py
intel2sigma/core/convert/: __init__.py  engine.py  pipelines.py
intel2sigma/core/heuristics/: __init__.py  base.py  config.py
intel2sigma/core/heuristics/checks/: __init__.py  condition_integrity.py  ioc_vs_behavior.py  lab_artifacts.py  metadata_completeness.py  overbroad_selection.py  path_specificity.py
intel2sigma/core/parsers/: __init__.py
intel2sigma/core/taxonomy/: __init__.py  loader.py  modifier_labels.py  schema.py
intel2sigma/core/validate/: __init__.py  issues.py  tier1.py  tier2.py  tier3.py
intel2sigma/data/: heuristics.yml  pipelines.yml
intel2sigma/data/examples/: _index.yml  file_event_anydesk_artefact.yml  process_creation_headless_powershell.yml  ps_script_obfuscated_iex.yml
intel2sigma/data/taxonomy/: antivirus.yml  application_jvm.yml  application_kubernetes.yml  application_log.yml  auditd.yml  azure_activity.yml  azure_audit.yml  azure_risk.yml  azure_signin.yml  cloudtrail.yml  create_remote_thread.yml  create_stream_hash.yml  create_task.yml  defender_log.yml  dns.yml  dns_query.yml  driver_load.yml  file_access.yml  file_change.yml  file_delete.yml  file_event.yml  file_event_linux.yml  gcp_audit.yml  github_audit.yml  image_load.yml  linux_misc.yml  network_connection.yml  okta.yml  opencanary.yml  pipe_created.yml  process_access.yml  process_creation.yml  process_creation_linux.yml  process_creation_macos.yml  proxy.yml  ps_classic_start.yml  ps_module.yml  ps_script.yml  raw_access_thread.yml  registry_add.yml  (+8 more)
intel2sigma/web/: __init__.py  app.py  corpus.py  draft.py  highlight.py  ioc.py  load.py  logging.py  mitre.py
intel2sigma/web/routes/: __init__.py  composer.py
intel2sigma/web/static/: intel2sigma.css
intel2sigma/web/templates/: base.html
intel2sigma/web/templates/composer/: _block.html  _breadcrumb.html  _corpus_results.html  _ioc_panel.html  _mitre_picker.html  load_modal.html  stage0_observation.html  stage1_detection.html  stage2_metadata.html  stage3_review.html  stage4_output.html
intel2sigma/web/templates/partials/: conversion_tabs.html  preview_pane.html  state_blob.html
scripts/: analyze_taxonomy.py  audit_corpus_emits.py  audit_corpus_loads.py  build_mitre_tree.py  build_sigmahq_corpus.py  curate_examples.py  demo_round_trip.py  fetch_sigmahq.py  generate_taxonomy_yaml.py  upgrade_taxonomy_labels.py
tests/: _state_blob.py  conftest.py  test_audit_emit.py  test_block_combinator.py  test_breadcrumb.py  test_build_similar.py  test_combinator_routes.py  test_composer_new_route.py  test_composer_routes.py  test_composer_stages_2_3_4.py  test_condition_parser.py  test_convert_engine.py  test_convert_pipelines.py  test_corpus_browse.py  test_corpus_emit_audit_ratchet.py  test_corpus_load_audit_ratchet.py  test_draft_tier1_items.py  test_field_tooltips.py  test_freeform_observation.py  test_ioc_classifier.py  test_ioc_routes.py  test_live_preview.py  test_load.py  test_mitre_picker.py  test_model_smoke.py  test_modifier_labels.py  test_pipeline_overrides.py  test_preview_canonical_parity.py  test_pysigma_integration.py  test_sigmahq_corpus.py  test_taxonomy_loader.py  test_taxonomy_verbiage.py  test_tier1_validator.py  test_tier2_validator.py  test_vendor_hashes.py  test_version_endpoint.py  test_web_shell.py
tests/golden/convert/: process_creation_crowdstrike.txt  process_creation_elasticsearch.txt  process_creation_kusto_mde.txt  process_creation_splunk.txt
tests/heuristics/: conftest.py  test_composer_integration.py  test_condition_integrity.py  test_engine.py  test_ioc_vs_behavior.py  test_lab_artifacts.py  test_metadata_completeness.py  test_overbroad_selection.py  test_path_specificity.py
